<resources>
    <string name="app_name">Repository G-2</string>
    <string name="enter_text">Enter text</string>
    <string name="save">Save</string>
    <string name="go_to_2nd">Go to 2-nd</string>
    <string name="default_theme">Default</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="second_activity_text">This is the Second Activity</string>
    <string name="read_storage">Read storage</string>
    <string name="back">Back</string>
    <string name="text_from_datastore">Text from DataStore</string>
    <string name="nothing_found">Nothing found</string>
</resources>