<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/text_from_datastore"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/readStorageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_storage" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>